# fast_food_delivery

./: .gitignore  FEEDBACKS.md  TZ.md  main.py  pyproject.toml
alembic/versions/: 011a22eb6d7c_fix_courier_wallet.py  05dc6ee8412c_fix_relationships.py  0b3b43bf9516_fix_relationships.py  13aa3b379b8b_change.py  200dc8901a9f_fix_status_in_order.py  28e426245e82_add_token_blanc_list.py  319717a0f9f2_fix_is_deleted.py  3305d833bca8_fix_relationships.py  33fa969249d7_fix_order_model.py  453388e6cb5c_add_is_active_in_product.py  5013a1f417f0_fix_relationships.py  504e936f9fd6_add_relation_to_disc_table.py  517bb4656c7d_beginning.py  59aa33354f96_add_name_field_to_notification_table.py  5a4c6c47e939_fix_relationships.py  5beb17480be6_add_status_in_order.py  636577314435_fix_relationships.py  6f86a5bd7498_changes_in_promocode.py  75afdcd0e11c_change.py  7cdf14e7ecb4_chopped_sub_category.py  9d077612a762_new_era.py  a00bba169846_fix_total_price.py  a578b5af5ebc_add_discount_table.py  aa703800c42d_merge_heads.py  b0fa0d473f61_add_some_changes.py  b6b5f86e4086_add_courier_wallet_tables.py  baf34fde8552_fix_relationships.py  c40d7954315c_fix_delivery.py  c8ae730e3d4e_add_is_sent_to_all.py  ce722b9e13a3_add_order_status_transition.py  ce7b31fb69f7_fix_relationships.py  d727593440cd_delete_promo_price_in_promocode.py  d9b7b3b8f23b_changes_in_promocode.py  de8eb6923b13_fix_time_zone.py  e015569533f9_fix_relationships.py  e458cdfc0840_fix_user_application.py  e5240c4d46cf_fix_relationships.py  (+6 more)
app/: celery.py  config.py  dependencies.py  main.py  models.py  utils.py
(+38 files in other folders)
