[project]
name = "fast-food-delivery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.134.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-jose>=3.5.0",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.47",
    "starlette-admin>=0.16.0",
    "uvicorn>=0.41.0",
]
